--- a/App.config
+++ b/App.config
@@ -3,15 +3,17 @@
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
 	</startup>
-	<appSettings>
-		
+	<connectionStrings>
+		<add name ="EmployeeConnection" connectionString="Data Source=localhost;Initial Catalog='Employee';Integrated Security=SSPI"/>
+	</connectionStrings>
+	<appSettings>		
 		<add key="apiURL" value =" https://api.github.com/users/{username}/repos"/>		
 		<add key="username" value ="deebaa"/>
-		<add key="token" value="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"/>
+		<add key="token" value="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"/>
+		<!--<add key="token" value="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"/>-->
 		<!--<add key="username" value ="jreaganx"/>
 		<add key="token" value="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"/>-->
 		<!--<add key="username" value ="test"/>
-		<add key="token" value=""/>-->
-		
+		<add key="token" value=""/>-->		
 	</appSettings>
 </configuration>
